force-app/main/default/objects/Loan_Configuration__mdt/Loan_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Configuration settings for each loan type — interest rates, maximum amounts, and tenure limits.</description>
    <label>Loan Configuration</label>
    <pluralLabel>Loan Configurations</pluralLabel>
</CustomObject>