force-app/main/default/objects/Loan_Configuration__mdt/fields/Base_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Base_Interest_Rate__c</fullName>
    <label>Base Interest Rate (%)</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>