force-app/main/default/objects/Loan_Configuration__mdt/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Loan Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>