force-app/main/default/objects/Loan_Configuration__mdt/fields/Max_Tenure_Months__c.field-meta.xml
<CustomField>
    <fullName>Max_Tenure_Months__c</fullName>
    <label>Max Tenure (Months)</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>