force-app/main/default/objects/Loan_Configuration__mdt/fields/Min_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Min_Credit_Score__c</fullName>
    <label>Minimum Credit Score</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>